# semanteecore

./: .dockerignore  Cargo.toml  Changelog.md  Dockerfile  LICENSE  README.md  README_PRISTINE.md  RELEASING.md  bors.toml  releaserc.toml
.circleci/: config.yml  list_cargo_binaries.py  move_binaries.sh
.docker/: Dockerfile
.github/: CODEOWNERS  config.yml
.github/workflows/: audit.yml  check.yml  coverage.yml  lint.yml
cleanroom/: Cargo.toml  README.md
cleanroom/resources/: subtest_releaserc_template.toml
cleanroom/src/: lib.rs  main.rs
cleanroom/src/command/: mod.rs  new.rs  packing.rs  test.rs
cleanroom/src/test_runner/: mod.rs  state.rs  workdir.rs
cleanroom/test_subjects/commit-analysis/bump-minor-on-fix/: env  rust.releaserc.toml
cleanroom/test_subjects/commit-analysis/bump-minor-on-fix/artifacts/rust/: tags.json
cleanroom/test_subjects/commit-analysis/bump-minor-on-fix/diffs/: rust.diff
cleanroom/test_subjects/commit-analysis/bump-minor-on-fix/repository/: Cargo.toml  git.tar
cleanroom/test_subjects/commit-analysis/bump-minor-on-fix/repository/src/: main.rs
cleanroom/test_subjects/commit-analysis/skip-chore/: rust.releaserc.toml
cleanroom/test_subjects/commit-analysis/skip-chore/repository/: Cargo.toml  git.tar
cleanroom/tests/: cleanroom.rs
core/: Cargo.toml  releaserc.toml
core/.docker/: Dockerfile
core/src/: lib.rs  main.rs  test_utils.rs
core/src/builtin_plugins/: early_exit.rs  mod.rs
core/src/config/: mod.rs  plugin_def.rs  step_def.rs  value_def.rs
core/src/config/hir/: mod.rs  plugin.rs  plugin_def.rs  step.rs  step_def.rs  value.rs
core/src/runtime/: data_mgr.rs  discovery.rs  dispatcher.rs  kernel.rs  mod.rs  plugin.rs  resolver.rs  sequence.rs  starter.rs  util.rs
core/src/runtime/graph/: mod.rs  releaserc.rs  workspace.rs
grammar/: dataflow.pest
plugin_api/: Cargo.toml  releaserc.toml
plugin_api/src/: keys.rs  lib.rs  utils.rs
plugin_api/src/flow/: kv.rs
plugin_api/src/proto/: mod.rs  response.rs
plugins/clog/: Cargo.toml
plugins/clog/src/: lib.rs
plugins/docker/: Cargo.toml
plugins/docker/src/: lib.rs
plugins/git/: Cargo.toml  releaserc.toml
plugins/git/src/: lib.rs
plugins/github/: Cargo.toml
plugins/github/src/: lib.rs
plugins/rust/: Cargo.toml
plugins/rust/src/: cargo.rs  lib.rs
src/: config.rs  kernel.rs  lib.rs  logger.rs  main.rs
src/builtin_plugins/: clog.rs  docker.rs  early_exit.rs  git.rs  github.rs  mod.rs  rust.rs
src/plugin/: discovery.rs  dispatcher.rs  mod.rs  resolver.rs  starter.rs  traits.rs
src/plugin/flow/: kv.rs  mod.rs
src/plugin/proto/: mod.rs  request.rs  response.rs
src/plugin_runtime/: data_mgr.rs  discovery.rs  dispatcher.rs  flow.rs  graph.rs  kernel.rs  mod.rs  resolver.rs  starter.rs  util.rs
src/plugin_runtime/graph/: releaserc.rs
src/plugin_support/: command.rs  keys.rs  mod.rs  traits.rs
src/plugin_support/flow/: kv.rs  mod.rs
src/plugin_support/proto/: mod.rs  request.rs  response.rs
