[package]
name = 'semantic-rs'
authors = [
    'Jan Schulte <hello@unexpected-co.de>',
    'Jan-Erik Rediger <janerik@fnordig.de>',
    'Mike Lubinets <me@mkl.dev>',
]
description = 'Automatic crate publishing'
license = 'MIT'
edition = '2018'
version = '2.12.1'

[dependencies]
git2 = '0.9'
clog = '0.9'
hubcaps = '0.5'
url = '2.0'
env_logger = '0.7'
clap = '2.0'
log = '0.4'
serde_json = '1.0'
tree_magic = '0.2'
http = '0.1'
reqwest = '0.9'
failure = '0.1'
dotenv = '0.14'
strum = '0.15'
strum_macros = '0.15'
glob = '0.3'
futures = '0.1'
tokio = '0.1'
pest = '2.1.2'
pest_derive = '2.1.0'
lazy_static = '1.4.0'
subprocess = '0.1.18'

[dependencies.semver]
version = '0.9'
features = ['serde']

[dependencies.toml]
version = '0.5'
features = ['preserve_order']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.linked-hash-map]
version = '0.5'
features = ['serde_impl']
[profile.release]
debug = true
overflow-checks = true
debug-assertions = true
