[package]
name = "cleanroom"
version = "0.0.0"
authors = ["mersinvald <me@mkl.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "cleanroom"

[[bin]]
path = "src/main.rs"
name = "cleanroom"

[dependencies]
structopt = "0.3.5"
toml = "0.5.5"
git2 = "0.9.2"
tar = "0.4.26"
walkdir = "2.2.9"
log = "0.4.8"
derive_more = "0.99.2"
fs_extra = "1.1.0"
env_logger = "0.7.1"
text-diff = "0.4.0"
anyhow = { version = "1.0.25" }
dotenv = "0.15.0"
serde_json = "1.0.44"
serde = "1.0.103"
getset = "0.0.9"
semanteecore = { path = "../" }
