[package]
name = "semanteecore"
version = "2.13.0"
license = "MIT"
authors = [
    'Jan Schulte <hello@unexpected-co.de>',
    'Jan-Erik Rediger <janerik@fnordig.de>',
    'Mike Lubinets <me@mkl.dev>',
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "semanteecore"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = ["emit-graphviz"]
emit-graphviz = ["petgraph"]

[dependencies]
git2 = '0.9'
clog = '0.9'
hubcaps = '0.5'
url = '2.0'
env_logger = '0.7'
clap = '2.0'
log = '0.4'
serde_json = '1.0'
tree_magic = '0.2'
http = '0.1'
reqwest = '0.9'
failure = '0.1'
dotenv = '0.14'
strum = '0.15'
glob = '0.3'
futures = '0.1'
tokio = '0.1'
pest = '2.1.1'
pest_derive = '2.1.0'
lazy_static = '1.4.0'
safe-graph = "0.1.6"
id-arena = "2.2.1"
petgraph = { version = "0.4.13", optional = true }

semanteecore_plugin_api = { version = "2.13", path = "../plugin_api" }
semanteecore_plugin_clog = { version = "2.13", path = "../plugins/clog" }
semanteecore_plugin_docker = { version = "2.13", path = "../plugins/docker" }
semanteecore_plugin_git = { version = "2.13", path = "../plugins/git" }
semanteecore_plugin_github = { version = "2.13", path = "../plugins/github" }
semanteecore_plugin_rust = { version = "2.13", path = "../plugins/rust" }
derive_more = "0.99.2"

[dependencies.semver]
version = '0.9'
features = ['serde']

[dependencies.toml]
version = '0.5'
features = ['preserve_order']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.linked-hash-map]
version = '0.5'
features = ['serde_impl']

[dev-dependencies]
tempfile = "3.1.0"
symlink = "0.1.0"
serial_test = "0.2.0"
serial_test_derive = "0.2.0"
