[package]
name = 'semanteecore'
authors = [
    'Jan Schulte <hello@unexpected-co.de>',
    'Jan-Erik Rediger <janerik@fnordig.de>',
    'Mike Lubinets <me@mkl.dev>',
]
description = 'Automatic crate publishing'
license = 'MIT'
edition = '2018'
version = '2.14.3'

[lib]
path = 'src/lib.rs'
name = 'semanteecore'

[[bin]]
path = 'src/main.rs'
name = 'semanteecore'

[features]
default = ["emit-graphviz"]
emit-graphviz = ["petgraph"]

[dependencies]
env_logger = '0.7'
log = '0.4'
serde_json = '1'
failure = '0.1'
dotenv = '0.15'
strum = '0.15'
pest = '2'
pest_derive = '2'
lazy_static = '1'
structopt = '0.3'
walkdir = "2"
safe-graph = "0.1"
id-arena = "2"
petgraph = { version = "0.4", optional = true }
glob = "0.3"
derive_more = "0.99"

semanteecore_plugin_api = { version = "2.14", path = "../plugin_api" }
semanteecore_plugin_clog = { version = "2.14", path = "../plugins/clog" }
semanteecore_plugin_docker = { version = "2.14", path = "../plugins/docker" }
semanteecore_plugin_git = { version = "2.14", path = "../plugins/git" }
semanteecore_plugin_github = { version = "2.14", path = "../plugins/github" }
semanteecore_plugin_rust = { version = "2.14", path = "../plugins/rust" }


[dependencies.semver]
version = '0.9'
features = ['serde']

[dependencies.toml]
version = '0.5'
features = ['preserve_order']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.linked-hash-map]
version = '0.5'
features = ['serde_impl']

[dev-dependencies]
tempfile = "3"
symlink = "0.1"
serial_test = "0.2"
serial_test_derive = "0.2"


