[package]
name = 'semanteecore'
authors = [
    'Jan Schulte <hello@unexpected-co.de>',
    'Jan-Erik Rediger <janerik@fnordig.de>',
    'Mike Lubinets <me@mkl.dev>',
]
description = 'Automatic crate publishing'
license = 'MIT'
edition = '2018'
version = '2.14.3'

[lib]
path = 'src/lib.rs'
name = 'semanteecore'

[[bin]]
path = 'src/main.rs'
name = 'semanteecore'

[dependencies]
env_logger = '0.7'
log = '0.4'
serde_json = '1.0'
failure = '0.1'
dotenv = '0.15'
strum = '0.15'
pest = '2.1.1'
pest_derive = '2.1.0'
lazy_static = '1.4.0'
structopt = '0.3'
walkdir = "2"
petgraph = "0.4"

semanteecore_plugin_api = { version = "2.14", path = "../plugin_api" }
semanteecore_plugin_clog = { version = "2.14", path = "../plugins/clog" }
semanteecore_plugin_docker = { version = "2.14", path = "../plugins/docker" }
semanteecore_plugin_git = { version = "2.14", path = "../plugins/git" }
semanteecore_plugin_github = { version = "2.14", path = "../plugins/github" }
semanteecore_plugin_rust = { version = "2.14", path = "../plugins/rust" }
glob = "0.3.0"

[dependencies.semver]
version = '0.9'
features = ['serde']

[dependencies.toml]
version = '0.5'
features = ['preserve_order']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.linked-hash-map]
version = '0.5'
features = ['serde_impl']

[dev-dependencies]
tempfile = "3.1.0"
symlink = "0.1.0"
serial_test = "0.2.0"
serial_test_derive = "0.2.0"


