[package]
name = "semanteecore_plugin_clog"
version = "2.13.0"
license = "MIT"
authors = [
    'Jan Schulte <hello@unexpected-co.de>',
    'Jan-Erik Rediger <janerik@fnordig.de>',
    'Mike Lubinets <me@mkl.dev>',
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = '0.9'
clog = '0.9'
url = '2.0'
log = '0.4'
serde_json = '1.0'
failure = '0.1'
semanteecore_plugin_api = { version = "2.13", path = "../../plugin_api" }

[dependencies.semver]
version = '0.9'
features = ['serde']

[dependencies.toml]
version = '0.5'
features = ['preserve_order']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dev-dependencies]
tempfile = "3.1.0"
symlink = "0.1.0"
serial_test = "0.2.0"
serial_test_derive = "0.2.0"

