[package]
name = "semanteecore_plugin_rust"
version = "2.14.3"
license = "MIT"
authors = [
    'Jan Schulte <hello@unexpected-co.de>',
    'Jan-Erik Rediger <janerik@fnordig.de>',
    'Mike Lubinets <me@mkl.dev>',
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = '0.4'
serde_json = '1.0'
failure = '0.1'
semanteecore_plugin_api = { version = "2.13", path = "../../plugin_api" }
cargo_metadata = "0.9.0"
cargo_toml = "0.8.0"
toml_edit = "0.1.5"

[dependencies.semver]
version = '0.9'
features = ['serde']

[dependencies.toml]
version = '0.5'
features = ['preserve_order']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.linked-hash-map]
version = '0.5'
features = ['serde_impl']

[dev-dependencies]
tempfile = "3.1.0"
symlink = "0.1.0"
serial_test = "0.2.0"
serial_test_derive = "0.2.0"

